# cpp_project_template

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh
include/: print.hpp
src/: CMakeLists.txt  print.cpp
test/: CMakeLists.txt
test/src/: test_print.cpp
